# prometheus-ecs-sd

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  vmagent.yaml
.github/workflows/: docker-image.yml
terraform/: README.md  main.tf  outputs.tf  variables.tf
