[tool.poetry]
name = "prometheus-ecs-sd"
version = "0.1.0"
description = "This generates a Prometheus `file_sd_config` compatible yaml file with all  the metadata required by Prometheus to iscrape ECS containers."
authors = ["Aniket Rao <anik3tra0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.26"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
